--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Case Dashboard</title>
+    <title>Tim Gormly Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -86,11 +86,11 @@
 
     <!--  TODO: Modify the links to reflect YOUR GitHub username.-->
     <nav>
-        <a href="https://github.com/denisecase">About</a>
+        <a href="https://github.com/tgormly">About</a>
         ◆
-        <a href="https://github.com/denisecase/cintel-01-getting-started"> GitHub Repository </a>
+        <a href="https://github.com/tgormly/cintel-01-getting-started"> GitHub Repository </a>
         ◆
-        <a href="https://denisecase.github.io/cintel-01-getting-started/"> GitHub Pages Webapp </a>
+        <a href="https://tgormly.github.io/cintel-01-getting-started/"> GitHub Pages Webapp </a>
   
     </nav>
 
@@ -98,7 +98,7 @@
     <!--  TODO: Use your name Dashboard in the top level heading (h1) on the page.-->
 
     <header>
-        <h1>Case Dashboard</h1>
+        <h1>Tim Gormly Dashboard</h1>
     </header>
 
     <section class="container">
